//
//  Messages.swift
//  ShoppingItems
//
//  Created by Bharatraj Rai on 4/16/20.
//  Copyright © 2020 Bharatraj Rai. All rights reserved.
//

import Foundation

struct Message {
    static let noGarmentTitle = "Garment field is empty"
    static let noGarmentDesc = "Please enter garment name and then proceed to save"
}
